[tool.poetry]
name = "pokemon-interactive-fiction"
version = "0.1.0"
description = ""
authors = ["J-Lehrack <jjlehrack899@gmail.com>"]
readme = "README.md"
packages = [{include = "pokemon_interactive_fiction"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
